Fix 1px gap between bottom nav and resource filter menu.

--- a/src/css/resources.css
+++ b/src/css/resources.css
@@ -509,7 +509,7 @@ tr:last-child > td:last-child {
   .selectbar{
     position: fixed;
     top: auto;
-    bottom: calc(3px + var(--navbar-max-height));
+    bottom: calc(2px + var(--navbar-max-height));
     margin: 0;
     border-radius: 0;
     border: 0;
